changed code for prediction of PSA to match with survfit

--- a/report/clinical/bibliography.bib
+++ b/report/clinical/bibliography.bib
@@ -9,6 +9,28 @@
   publisher={Elsevier}
 }
 
+@article{partin1993use,
+  title={The use of prostate specific antigen, clinical stage and Gleason score to predict pathological stage in men with localized prostate cancer},
+  author={Partin, Alan W and Yoo, John and Carter, H Ballentine and Pearson, Jay D and Chan, Daniel W and Epstein, Jonathan I and Walsh, Patrick C},
+  journal={The Journal of urology},
+  volume={150},
+  number={1},
+  pages={110--114},
+  year={1993},
+  publisher={Elsevier}
+}
+
+@article{makarov2007updated,
+  title={Updated nomogram to predict pathologic stage of prostate cancer given prostate-specific antigen level, clinical stage, and biopsy Gleason score (Partin tables) based on cases from 2000 to 2005},
+  author={Makarov, Danil V and Trock, Bruce J and Humphreys, Elizabeth B and Mangold, Leslie A and Walsh, Patrick C and Epstein, Jonathan I and Partin, Alan W},
+  journal={Urology},
+  volume={69},
+  number={6},
+  pages={1095--1101},
+  year={2007},
+  publisher={Elsevier}
+}
+
 @article{gentleman1994maximum,
   title={Maximum likelihood for interval censored data: {Consistency} and computation},
   author={Gentleman, Robert and Geyer, Charles J},
