--- a/report/clinical/mainmatter/discussion.tex
+++ b/report/clinical/mainmatter/discussion.tex
@@ -6,4 +6,4 @@ The proposed joint model accounted for the complex correlation structure that ex
 
 The clinical implications of our work are as follows. The median survival time for GS7 is more than ten years in PRIAS, and in some other cohorts (Figure~\ref{fig:npmle_plot}). That is, more than 50\% of AS patients do not require any biopsy during the first ten years of follow-up. We hope that our work will address patient apprehensions regarding adverse outcomes in AS, in a more objective manner. Many AS programs still utilize a rigorous schedule of yearly biopsies \citep{nieboer2018active}. However, with concerns about non-compliance and burden of biopsies \citep{bokhorst2015compliance}, the availability of our web based tool may encourage patients and doctors to consider personalized schedules.
 
-Our work has certain limitations. The proposed model is valid only for the first thirteen years of follow-up in PRIAS, whereas GS7 may occur much later in many patients. Due to this issue, the calibration and discrimination measures of predictions were also less accurate in later follow-up periods. These issue can be mitigated by refitting the model as more follow-up data is gathered in PRIAS. While we focused only on GS7, it is susceptible to inter-observer variation. Models which account for this variation \citep{coley2017prediction,balasubramanian2003estimation} will be interesting to investigate further. However, the methodology to schedule biopsies, and to estimate the consequences of following a schedule need not change. There is also a potential for including diagnostic information from novel biomarkers, quality of life measures, and magnetic resonance imaging (MRI). Currently, this data is very sparsely available in the PRIAS dataset. However, in future, adding this information in our model is trivial. This is because modeling correlation for extra outcomes, mainly entails connecting sub-models for the outcomes to shared random effects (see Figure~\ref{fig:jm_blockdiag}). Our model can also be used to schedule MRI scans, since they are expensive in developing countries.
+Our work has certain limitations. The proposed model is valid only for the first ten years of follow-up in PRIAS, whereas GS7 may occur much later in many patients. Due to this issue, we could schedule biopsies only for the first ten years follow-up. In addition, the calibration and discrimination measures of predictions were also less accurate in later follow-up periods. These problems can be mitigated by refitting the model as more follow-up data is gathered in PRIAS. While we focused only on GS7, it is susceptible to inter-observer variation. Models which account for this variation \citep{coley2017prediction,balasubramanian2003estimation} will be interesting to investigate further. However, the methodology to schedule biopsies, and to estimate the consequences of following a schedule need not change. There is also a potential for including diagnostic information from novel biomarkers, quality of life measures, and magnetic resonance imaging (MRI). Currently, this data is very sparsely available in the PRIAS dataset. However, in future, adding this information in our model is trivial. This is because modeling correlation for extra outcomes, mainly entails connecting sub-models for the outcomes to shared random effects (see Figure~\ref{fig:jm_blockdiag}). Our model can also be used to schedule MRI scans, since they are expensive in developing countries.
