--- a/report/clinical/mainmatter/introduction.tex
+++ b/report/clinical/mainmatter/introduction.tex
@@ -10,7 +10,7 @@ Biopsies are conducted periodically, and hence GS7 is always detected with a tim
 \label{fig:npmle_plot}
 \end{figure}
 
-A simple alternative to frequent biopsies is infrequent biopsies. However, studies suggest not reducing biopsy frequency beyond 24 months, to have a sufficient window of opportunity for curative treatment \citep{inoue2018comparative,de2017estimating}. Although, biopsy every 24 months still leads to five unnecessary biopsies over ten years for 50\% patients (Figure~\ref{fig:npmle_plot}). A promising alternative to fixed biopsies is biopsies based on personalized risk of GS7. For example, among the two patients shown in Figure~\ref{fig:riskBasedExample}, patient B is a more suitable candidate for biopsy than patient A, because his risk of GS7 is much higher. Simulation studies have shown that personalized schedules may better balance the number of biopsies per detected GS7 than fixed schedules \citep{tomer2019}. 
+A simple alternative to frequent biopsies is infrequent biopsies. However, studies suggest not reducing biopsy frequency beyond 24 months, to have a sufficient window of opportunity for curative treatment \citep{inoue2018comparative,de2017estimating}. Although, biopsy every 24 months still leads to five unnecessary biopsies over ten years for 50\% patients (Figure~\ref{fig:npmle_plot}). A promising alternative to fixed biopsies is biopsies based on personalized risk of GS7. For example, among the two patients shown in Figure~\ref{fig:riskBasedExample}, patient B is a more suitable candidate for biopsy than patient A, because his risk of GS7 is much higher. %Simulation studies have shown that personalized schedules may better balance the number of biopsies per detected GS7 than fixed schedules \citep{tomer2019}. 
 
 \begin{figure}[!htb]
 \centerline{\includegraphics[width=\columnwidth]{images/riskBasedExample.eps}}
@@ -18,6 +18,6 @@ A simple alternative to frequent biopsies is infrequent biopsies. However, studi
 \label{fig:riskBasedExample}
 \end{figure}
 
-The first challenge in developing risk-based schedules is consolidating observed patient data (e.g., PSA, previous biopsy results) into GS7 risk estimates. For this previous studies have employed joint models for time-to-event and longitudinal data \citep{tomer2019,coley2017prediction,rizopoulos2012joint}. However, translating risk estimates into clinical decisions is challenging. For example, a 10\% risk can be perceived as high/low depending upon the patient's age. Patients may also weigh the risk of GS7 with the potential consequences of another biopsy. Two important consequences are the timing and total number of biopsies (burden), and the time delay in the detection of GS7 (smaller is better). These consequences vary between the patients, and also over the follow-up period for the same patient.
+The first challenge in developing risk-based schedules is consolidating observed patient data (e.g., PSA, previous biopsy results) into GS7 risk estimates. Previousy, studies have utilized latest value of PSA to predict the Gleason score \citep{partin1993use,makarov2007updated}. However, in AS the entire trajectory of PSA of a patient is available. To accomodate such longitudinal PSA data, a suitable model is joint model for time-to-event and longitudinal data \citep{tomer2019,coley2017prediction,rizopoulos2012joint}. A subsequent challenge is to translate risk estimates for GS7 into clinical decisions is challenging. For example, a 10\% risk can be perceived as high/low depending upon the patient's age. Patients may also weigh the risk of GS7 with the potential consequences of another biopsy. Two relevant consequences are the timing and total number of biopsies (burden), and the time delay in the detection of GS7 (smaller is better). These consequences vary between the patients, and also over the follow-up period for the same patient.
 
 The goal of this work was to assist patients and doctors in making better decisions of biopsies than fixed and frequent biopsies. We intended to achieve this by providing the patients risk based personalized schedules of biopsies, and to allow them to compare the consequences of each schedule before making a decision. To this end, we took three steps. First we fitted a prediction (joint) model to the world's largest AS dataset, PRIAS \citep{bul2013active}. We then externally validated the model predictions in five largest AS cohorts that are part of the GAP3 database. Lastly, we utilized the personalized GS7 risk predictions to calculate the timing and total number of biopsies, and the time delay in the detection of GS7 for risk-based and fixed biopsy schedules.
