--- a/report/clinical/supplementary.tex
+++ b/report/clinical/supplementary.tex
@@ -66,23 +66,25 @@
 \cortext[corauthor]{Corresponding author (Anirudh Tomer): Erasmus MC, kamer flex Na-2823, PO Box 2040, 3000 CA Rotterdam, the Netherlands. Tel: +31 10 70 43393}
 \ead{a.tomer@erasmusmc.nl}
 
-\author[1]{Dimitris Rizopoulos, PhD}
-\ead{d.rizopoulos@erasmusmc.nl}
-
 \author[2]{Daan Nieboer, MSc}
 \ead{d.nieboer@erasmusmc.nl}
 
 \author[3]{Monique J. Roobol, PhD}
 \ead{m.roobol@erasmusmc.nl}
 
-\author[4]{Au Thor}
-\author[4]{Aut Hor}
-\author[4]{Auth Or}
+\author[4]{Anders Bjartell, PhD}
+\ead{anders.bjartell@med.lu.se}
+
+\author[1]{Dimitris Rizopoulos, PhD}
+\ead{d.rizopoulos@erasmusmc.nl}
+
+\author[5]{Movember Foundation’s Global Action Plan Prostate Cancer Active Surveillance (GAP3) consortium}
 
 \address[1]{Department of Biostatistics, Erasmus University Medical Center, Rotterdam, the Netherlands}
 \address[2]{Department of Public Health, Erasmus University Medical Center, Rotterdam, the Netherlands}
 \address[3]{Department of Urology, Erasmus University Medical Center, Rotterdam, the Netherlands}
-\address[4]{Department of xxxx, xxxx University Medical Center, City, Country}
+\address[4]{Department of Urology, Skåne University Hospital, Malmö, Sweden}
+\address[5]{The Movember Foundation’s Global Action Plan Prostate Cancer Active Surveillance (GAP3) consortium members presented in Appendix A}
 
 %% or include affiliations in footnotes:
 \end{frontmatter}
@@ -99,8 +101,6 @@
 \clearpage
 \input{supplementary/source_code}
 \clearpage
-
-\section*{References}
 
 \bibliography{bibliography}
 
