roc based schedule

--- a/report/clinical/main_manuscript.tex
+++ b/report/clinical/main_manuscript.tex
@@ -77,7 +77,7 @@
 \address[1]{Department of Biostatistics, Erasmus University Medical Center, Rotterdam, the Netherlands}
 \address[2]{Department of Public Health, Erasmus University Medical Center, Rotterdam, the Netherlands}
 \address[3]{Department of Urology, Erasmus University Medical Center, Rotterdam, the Netherlands}
-\address[4]{Department of Urology, Skåne University Hospital, Malmö, Sweden}
+\address[4]{Department of Urology, Sk\r{a}ne University Hospital, Malm\"{o}, Sweden}
 \address[5]{The Movember Foundation’s Global Action Plan Prostate Cancer Active Surveillance (GAP3) consortium members presented in Appendix A}
 
 %% or include affiliations in footnotes:
